--- a/.github/workflow/cicd.yml
+++ b/.github/workflow/cicd.yml
@@ -12,4 +12,19 @@ jobs:
       - name: Checkout Source
         uses: actions/checkout@v3
       - name: Login to Docker Hub
-        uses: docker login -u ${{  }} -p
+        run: docker login -u ${{ secrets.ODCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build Docker Image
+        run: docker build -t sonsungjong/react-app
+      - name: Publish image to docker Hub
+        run: docker push sonsungjong/reactjs-app:latest
+
+  deploy:
+    needs: build
+    runs-on: aws-ec2
+    steps:
+      - name: Pull image from docker Hub
+        run: docker pull sonsungjong/reactjs-app:latest
+      - name: Delete Old Container
+        run: docker rm -f reactContainer
+      - name: Run docker container
+        run: docker run -d -p 3000:80 --name reactContainer sonsungjong/reactjs-app
