--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build Docker Image
-        run: docker build -t sonsungjong/react-app .
+        run: docker build -t sonsungjong/reactjs-app .
       - name: Publish image to docker Hub
         run: docker push sonsungjong/reactjs-app:latest
 
